k8s/base/03-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-cloud-system-webhook-server
  namespace: k8s-cloud-system
  labels:
    app.kubernetes.io/name: k8s-cloud-system
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/commponent: webhook-server
    app.kubernetes.io/part-of: k8s-cloud-system
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-cloud-system
      app.kubernetes.io/version: "0.0.1"
      app.kubernetes.io/commponent: webhook-server
      app.kubernetes.io/part-of: k8s-cloud-system
      app.kubernetes.io/managed-by: kubectl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-cloud-system
        app.kubernetes.io/version: "0.0.1"
        app.kubernetes.io/commponent: webhook-server
        app.kubernetes.io/part-of: k8s-cloud-system
        app.kubernetes.io/managed-by: kubectl
    spec:
      serviceAccountName: k8s-cloud-system
      volumes:
        - name: tls-secret
          secret:
            secretName: k8s-cloud-system-webhook-ca-bundle
      containers:
        - name: webhook-server
          image: localhost:5001/admission-controller-base/webhook-server-debug:ec967ea-dirty
          # livenessProbe:
          #   httpGet:
          #     path: /ping
          #     port: 5000
          #   initialDelaySeconds: 5
          #   periodSeconds: 15
          # readinessProbe:
          #   httpGet:
          #     path: /readyz
          #     port: 5000
          #   initialDelaySeconds: 5
          #   periodSeconds: 15
          resources:
            limits:
              memory: 512Mi
              cpu: "500m"
            requests:
              memory: 512Mi
              cpu: "500m"
          volumeMounts:
            - name: tls-secret
              mountPath: /etc/webhook/certs
              readOnly: true
          ports:
            - containerPort: 5000
            - containerPort: 443
            - containerPort: 80
          # command: ["bash", "-c", "while true; do clear; sleep 60000; done"]
          command:
            [
              "/bin/bash",
              "-c",
              "./bin/webhook-server.exe --cert-file $WEBHOOK_CERT_FILE_PATH --key-file $WEBHOOK_KEY_FILE_PATH --message $WEBHOOK_MESSAGE",
            ]
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-cloud-system
  namespace: k8s-cloud-system
  labels:
    app.kubernetes.io/name: k8s-cloud-system
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/commponent: webhook-server
    app.kubernetes.io/part-of: k8s-cloud-system
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: k8s-cloud-system
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/commponent: webhook-server
    app.kubernetes.io/part-of: k8s-cloud-system
    app.kubernetes.io/managed-by: kubectl
  ports:
    - port: 5000
      name: k8s-cloud-system
    - port: 443
      targetPort: 5000
      name: https
    - port: 80
      targetPort: 5000
      name: http
