k8s/base/05-networking-external-tests.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-cloud-system
  namespace: k8s-cloud-system
  labels:
    k8s.mrll.com/app: k8s-cloud-system
    k8s.mrll.com/component: webhook-service
spec:
  selector:
    k8s.mrll.com/app: k8s-cloud-system
    k8s.mrll.com/component: webhook-server
  ports:
    - port: 5000
      name: k8s-cloud-system
    - port: 443
      name: https
    - port: 80
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-cloud-system
  namespace: k8s-cloud-system
  labels:
    k8s.mrll.com/app: k8s-cloud-system
    k8s.mrll.com/component: webhook-external-traffic-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s-cloud-system.${K8S_FQDN}
      secretName: k8s-cloud-system-soteria-cert
  rules:
    - host: k8s-cloud-system.${K8S_FQDN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-cloud-system
                port:
                  number: 5000
